fix gradient text on safari

--- a/_client/styles/header.scss
+++ b/_client/styles/header.scss
@@ -82,6 +82,7 @@ header a:hover {
 .title {
   text-transform: uppercase;
   font-size: 3rem;
+  max-width: 10ch;
   color: transparent;
   --turn: 220deg;
   background: linear-gradient(
@@ -99,13 +100,9 @@ header a:hover {
   color: transparent;
 }
 
-.title span {
-  display: block;
-}
-
 @media (min-width: 760px) {
-  .title span {
-    display: inline-block;
+  .title {
+    max-width: 100%;
   }
 }
 
@@ -144,14 +141,6 @@ header a:hover {
     height: 100%;
   }
 }
-
-// @media (min-width: 500px) {
-//   .headshot {
-//     --right: 2rem;
-//     --top: 6rem;
-//     --size: 8rem;
-//   }
-// }
 
 @media (min-width: 500px) {
   .headshot {
